<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ba_hung.constraintlayout.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/backgroun2"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.34" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39138943"
        tools:layout_editor_absoluteY="200dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/country_name"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="14dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_name"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_contact"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_lorem"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:text="@string/btn_cancel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_editor_absoluteX="284dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:text="@string/btn_submit"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginRight="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="36dp"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43052837" />

</android.support.constraint.ConstraintLayout>
